# sbg_gps_launch

./: CMakeLists.txt  README.md  package.xml
config/: sbg_device_uart_default.yaml
doc/: sapos_serial_setup.drawio  sapos_serial_wiring.drawio  sapos_usb_setup.drawio
launch/: sbg_gps_bringup.launch
