<?xml version="1.0"?>
<package>
  <name>sbg_gps_launch</name>
  <version>0.0.1</version>
  <description>Documentation and launch and config files for SBG ROS Driver package</description>
  <maintainer email="felix.keppler@ivi.fraunhofer.de">Felix Keppler</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>sbg_driver</run_depend>
  
</package>